--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="game-container">
     <!-- Map Container -->
     <div id="map">
-      <img src="your-edited-map.png" alt="Cyber Survivor Island" id="island-map">
+      <img src="./graphics/cyber-survivor-map.webp" alt="Cyber Survivor Island" id="island-map">
       <!-- Clickable Areas -->
       <div class="map-area" id="lagoon" data-area="Phishing Lagoon" style="top: 20%; left: 30%;"></div>
       <div class="map-area" id="jungle" data-area="Social Media Jungle" style="top: 40%; left: 50%;"></div>
