--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
   <div id="game-container">
+  <h1 class="game-title">Cyber Survivor Island</h1>
     <!-- Map Container -->
-    <div id="map">
+    <div id="map" style="position: relative;">
       <img src="./graphics/cyber-survivor-map.webp" alt="Cyber Survivor Island" id="island-map">
       <!-- Clickable Areas -->
-      <div class="map-area" id="lagoon" data-area="Phishing Lagoon" style="top: 20%; left: 30%;"></div>
-      <div class="map-area" id="jungle" data-area="Social Media Jungle" style="top: 40%; left: 50%;"></div>
-      <div class="map-area" id="volcano" data-area="Vishing Volcano" style="top: 60%; left: 70%;"></div>
+      <div class="map-area" id="lagoon" data-area="Phishing Lagoon" style="top: 40%; left: 45%;"></div>
+      <div class="map-area" id="jungle" data-area="Social Media Jungle" style="top: 15%; left: 60%;"></div>
+      <div class="map-area" id="volcano" data-area="Vishing Volcano" style="top: 22%; left: 86%;"></div>
       <!-- Add more areas as needed -->
     </div>
 
