--- a/index.html
+++ b/index.html
@@ -22,13 +22,20 @@
 
     <!-- Story Modal -->
     <div id="story-modal" class="hidden">
-      <div class="modal-content">
-        <h2 id="area-title"></h2>
-        <p id="area-description"></p>
-        <button id="start-challenge">Start Challenge</button>
-        <button id="close-modal">Close</button>
+      <div class="modal-container">
+        <div class="modal-header">
+          <h2 id="area-title"></h2>
+        </div>
+        <div class="modal-body">
+          <p id="area-description"></p>
+        </div>
+        <div class="modal-footer">
+          <button id="start-challenge" class="modal-button">Start Challenge</button>
+          <button id="close-modal" class="modal-button">Close</button>
+        </div>
       </div>
     </div>
+
   </div>
 
   <script src="script.js"></script>
