--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
       <!-- Clickable Areas -->
       <div class="map-area" id="lagoon" data-area="Phishing Lagoon" style="top: 40%; left: 45%;"></div>
       <div class="map-area" id="jungle" data-area="Social Media Jungle" style="top: 15%; left: 60%;"></div>
-      <div class="map-area" id="volcano" data-area="Vishing Volcano" style="top: 22%; left: 86%;"></div>
-      <!-- Add more areas as needed -->
+      <div class="map-area" id="volcano" data-area="Vishing Volcano" style="top: 24%; left: 86%;"></div>
+      <div class="map-area" id="passwords" data-area="Password Cliffs" style="top: 14%; left: 22%;"></div>
+      <div class="map-area" id="darkweb" data-area="Dark Web Depths" style="top: 54%; left: 4%;"></div>
+      <div class="map-area" id="shipwreck" data-area="Trojan Ship Wreck" style="top: 60%; left: 24%;"></div>
+      <div class="map-area" id="market" data-area="Market Scams" style="top: 42%; left: 23%;"></div>
     </div>
 
     <!-- Story Modal -->
