add: title style

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <div id="game-container">
-  <h1 class="game-title">Cyber Survivor Island</h1>
+  <h1 class="game-title">Cyber-Survivor Island</h1>
     <!-- Map Container -->
     <div id="map" style="position: relative;">
       <img src="./graphics/cyber-survivor-map.webp" alt="Cyber Survivor Island" id="island-map">
