--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 <body>
 
+  
   <div id="game-container">
-  <h1 class="game-title">Cyber-Survivor Island</h1>
+    <div class="title-wrapper">
+      <h1 class="game-title">Cyber-Survivor Island</h1>
+    </div>
+    
     <!-- Map Container -->
     <div id="map" style="position: relative;">
       <img src="./graphics/cyber-survivor-map.webp" alt="Cyber Survivor Island" id="island-map">
@@ -21,6 +25,7 @@
       <div class="map-area" id="darkweb" data-area="Dark Web Depths" style="top: 54%; left: 4%;"></div>
       <div class="map-area" id="shipwreck" data-area="Trojan Ship Wreck" style="top: 60%; left: 24%;"></div>
       <div class="map-area" id="market" data-area="Market Scams" style="top: 42%; left: 23%;"></div>
+      <div class="map-area" id="deepfakes" data-area="Deep Water Deep Fakes" style="top: 52%; left: 80%;"></div>
     </div>
 
     <!-- Story Modal -->
