add: new area blackmailers bluffs

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="title-wrapper">
       <h1 class="game-title">Cyber-Survivor Island</h1>
     </div>
-    
+
     <!-- Map Container -->
     <div id="map" style="position: relative;">
       <img src="./graphics/cyber-survivor-map.webp" alt="Cyber Survivor Island" id="island-map">
@@ -26,6 +26,7 @@
       <div class="map-area" id="shipwreck" data-area="Trojan Ship Wreck" style="top: 60%; left: 24%;"></div>
       <div class="map-area" id="market" data-area="Market Scams" style="top: 42%; left: 23%;"></div>
       <div class="map-area" id="deepfakes" data-area="Deep Water Deep Fakes" style="top: 52%; left: 80%;"></div>
+      <div class="map-area" id="blackmail" data-area="Blackmail Bluffs" style="top: 18%; left: 10%;"></div>
     </div>
 
     <!-- Story Modal -->
