add: area click sounds

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <body>
   <audio id="audioPlayer" src="./sounds/pirate-music.mp3"></audio>
-  
+  <audio id="parrotSound" src="./sounds/parrot-5.wav"></audio>
+
   <div id="game-container">
     <div class="title-wrapper">
       <h1 class="game-title">Cyber-Survivor Island</h1>
