--- a/index.html
+++ b/index.html
@@ -33,9 +33,25 @@
       <div class="map-area" id="market" data-area="Market Scams" style="top: 42%; left: 23%;"></div>
       <div class="map-area" id="deepfakes" data-area="Deep Water Deep Fakes" style="top: 52%; left: 80%;"></div>
       <div class="map-area" id="blackmail" data-area="Blackmail Bluffs" style="top: 18%; left: 10%;"></div>
-      <button onclick="playTrack(0, 139)">Play Track 1</button>
-      <button onclick="playTrack(411, 539)">Play Track 2</button>
-      <button id="muteButton">Mute Sounds</button>
+      <!-- Button Container -->
+      <div class="button-container">
+        <div class="left-buttons">
+          <button onclick="playTrack(0, 139)">Play Track 1</button>
+          <button onclick="playTrack(411, 539)">Play Track 2</button>
+          <button id="muteButton">Mute Sounds</button>
+        </div>
+
+        <div class="progress-wrapper">
+          <div id="customProgressBar" class="progress-bar">
+            <div id="progressFill" class="progress-fill"></div>
+          </div>
+        </div>
+        
+        <div class="right-buttons">
+          <button class="credits-button">Credits</button>
+        </div>
+      </div>
+    <!-- end of Map Container Block -->
     </div>
 
     <!-- Story Modal -->
