update: minor style and animation tweaks

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <!-- Map Container -->
     <div id="map" style="position: relative;">
       <img src="./graphics/cyber-survivor-map.webp" alt="Cyber Survivor Island" id="island-map">
+      <img src="./graphics/skull-and-bones.webp" alt="Skull and Bones" id="skull-and-bones">
+  
       <!-- Clickable Areas -->
       <div class="map-area" id="phishing" data-area="Phishing Lagoon" style="top: 40%; left: 45%;"></div>
       <div class="map-area" id="jungle" data-area="Social Media Jungle" style="top: 15%; left: 60%;"></div>
