--- a/index.html
+++ b/index.html
@@ -89,6 +89,26 @@
     </div>
   </div>
 
+  <!-- Intro Modal -->
+  <div id="instructionsModal" class="instructions-modal">
+    <div class="instructions-modal-content">
+      <!-- Image Section -->
+      <div class="instructions-modal-image">
+        <img src="./graphics/explorer.webp" alt="Instruction Image" />
+      </div>
+  
+      <!-- Text Section -->
+      <div class="instructions-modal-text">
+        <h2>Welcome to Cyber Survivor Island!</h2>
+        <p>Explore the island to complete challenges and learn cybersecurity tips along the way.</p>
+        <p>Click on areas to start a challenge, and remember to stay vigilant and have fun!</p>
+        <button id="closeInstructionsButton">Start Adventure</button>
+      </div>
+    </div>
+  </div>
+  
+  
+
   <script src="script.js"></script>
   <script src="sounds.js"></script>
 </body>
