update: tweak intro modal style

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
       <!-- Text Section -->
       <div class="instructions-modal-text">
         <h2>Welcome to Cyber Survivor Island!</h2>
-        <p>Explore the island to complete challenges and learn cybersecurity tips along the way.</p>
-        <p>Click on areas to start a challenge, and remember to stay vigilant and have fun!</p>
+        <p>Explore the island to complete challenges and learn helpful cybersecurity tips along the way.</p>
+        <p>Click on an area to start a challenge, and remember to stay vigilant and have fun!</p>
         <button id="closeInstructionsButton">Start Adventure</button>
       </div>
     </div>
