update: tweak styles/layout

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
       <div class="map-area incomplete" id="deepfakes" data-area="Deep Water... Deep Fakes" style="top: 52%; left: 80%;"></div>
       <div class="map-area incomplete" id="blackmail" data-area="Extortion Point" style="top: 18%; left: 10%;"></div>
 
-      <div class="map-area info" id="fun-fact" data-area="quick tip!" data-info="Did you know? Always verify the sender's email address to spot phishing attempts!" style="top: 30%; left: 75%;"></div>
-      <div class="map-area info" id="quick-tip"  data-area="quick tip!" data-info="Quick Tip: Use two-factor authentication (2FA) for extra account security." style="top: 50%; left: 20%;"></div>
-      <div class="map-area info" id="quick-tip2"  data-area="quick tip!" data-info="Quick Tip: Use two-factor authentication (2FA) for extra account security." style="top: 10%; left: 20%;"></div>
+      <div class="map-area info" id="fun-fact" data-area="quick tip!" data-info="Always verify the sender's email address to spot phishing attempts!" style="top: 30%; left: 75%;"></div>
+      <div class="map-area info" id="quick-tip"  data-area="quick tip!" data-info="Always use two-factor authentication (2FA) for extra account security!" style="top: 50%; left: 20%;"></div>
+      <div class="map-area info" id="quick-tip2"  data-area="quick tip!" data-info="Data backups are important to protect against ransomware.  Any less than 3 copies of your data is NOT a backup!" style="top: 10%; left: 20%;"></div>
 
       <!-- Button Container -->
       <div class="button-container">
@@ -64,8 +64,8 @@
     </div>
 
     <!-- Info Modal  -->
-    <div id="infoModal" class="modal">
-      <div class="modal-content">
+    <div id="infoModal" class="modal-info">
+      <div class="modal-info-content">
         <span id="infoModalClose" class="close">&times;</span>
         <p id="infoModalContent"></p>
       </div>
