add: credits screen

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         
         <div class="right-buttons">
-          <button class="credits-button">Credits</button>
+          <button id="creditsButton" class="credits-button">Credits</button>
         </div>
       </div>
     <!-- end of Map Container Block -->
@@ -107,6 +107,24 @@
       </div>
     </div>
   </div>
+
+    <!-- Credits Modal -->
+    <div id="creditsModal" class="instructions-modal">
+      <div class="instructions-modal-content">
+        <!-- Image Section -->
+        <div class="instructions-modal-image">
+          <img src="./graphics/explorer.webp" alt="Credits Image" />
+        </div>
+    
+        <!-- Text Section -->
+        <div class="instructions-modal-text">
+          <h2>Cyber Survivor Island - Credits</h2>
+          <p>Game created by Ernie Johnson.</p>
+          <p>&copy; 2025. All rights reserved.</p>
+          <button id="closeCreditsButton">Continue Adventure</button>
+        </div>
+      </div>
+    </div>
   
   
 
