add: csi logo, adjust styles

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
   <div id="game-container">
     <div class="title-wrapper">
+      <!-- <img src="./graphics/csi-logo.webp" alt="Cyber Survivor Island" id="banner-logo"> -->
       <h1 class="game-title">Cyber-Survivor Island</h1>
     </div>
 
@@ -25,7 +26,7 @@
     <div id="map" style="position: relative;">
       <img src="./graphics/cyber-survivor-map.webp" alt="Cyber Survivor Island" id="island-map">
       <img src="./graphics/skull-and-bones.webp" alt="Skull and Bones" id="skull-and-bones">
-  
+      <img src="./graphics/csi-logo.webp" alt="Cyber Survivor Island" id="banner-logo">
       <!-- Clickable Areas -->
       <div class="map-area incomplete" id="phishing" data-area="The Phishing Lagoon"  style="top: 40%; left: 45%;"></div>
       <div class="map-area incomplete" id="jungle" data-area="Social Media Scam Safari"  style="top: 15%; left: 60%;"></div>
@@ -113,7 +114,7 @@
       <div class="instructions-modal-content">
         <!-- Image Section -->
         <div class="instructions-modal-image">
-          <img src="./graphics/explorer.webp" alt="Credits Image" />
+          <img src="./graphics/csi-logo.webp" alt="Credits Image" />
         </div>
     
         <!-- Text Section -->
