update: tweak modal layout

--- a/index.html
+++ b/index.html
@@ -120,7 +120,13 @@
         <!-- Text Section -->
         <div class="instructions-modal-text">
           <h2>Cyber Survivor Island - Credits</h2>
-          <p>Game created by Ernie Johnson.</p>
+          <p>Game Concept & Design: Ernie Johnson<BR>
+            Programming: Ernie Johnson<BR>
+          Artwork: Ernie Johnson<BR>
+          Music: Ioannis Gutevas<br>
+          Sounds: Gravity Sound Studio<br>
+          QA/Testing: JR
+          </p>
           <p>&copy; 2025. All rights reserved.</p>
           <button id="closeCreditsButton">Continue Adventure</button>
         </div>
