add: gold sounds on info modals

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
   <audio id="audioPlayer" src="./sounds/pirate-music.mp3"></audio>
   <audio id="sfxSound" src="./sounds/parrot-5.wav"></audio>
+  <audio id="goldSound" src="./sounds/gold-10.wav"></audio>
 
   <div id="game-container">
     <div class="title-wrapper">
