add: dynamic generated/randomized info areas & add win condition check

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       JavaScript is required to run this game. Please enable JavaScript in your browser settings.
     </div>
   </noscript>
-  
+
   <audio id="audioPlayer" src="./sounds/pirate-music.mp3"></audio>
   <audio id="sfxSound" src="./sounds/parrot-5.wav"></audio>
   <audio id="goldSound" src="./sounds/gold-10.wav"></audio>
@@ -38,7 +38,7 @@
       <img src="./graphics/mouse-mini.webp" alt="mouse" id="mouse-graphic">
 
       <!-- Clickable Areas -->
-      <div class="map-area incomplete" id="phishing" data-area="The Phishing Lagoon"  style="top: 40%; left: 45%;"></div>
+      <div class="map-area incomplete" id="phishing" data-area="The Phishing Cove"  style="top: 40%; left: 45%;"></div>
       <div class="map-area incomplete" id="jungle" data-area="Social Media Scam Safari"  style="top: 15%; left: 60%;"></div>
       <div class="map-area incomplete" id="volcano" data-area="The Vishing Volcano"style="top: 26%; left: 86%;"></div>
       <div class="map-area incomplete" id="passwords" data-area="Fortress of Passwords" style="top: 24%; left: 76%;"></div>
@@ -48,9 +48,10 @@
       <div class="map-area incomplete" id="deepfakes" data-area="Deep Water... Deep Fakes" style="top: 52%; left: 80%;"></div>
       <div class="map-area incomplete" id="blackmail" data-area="Extortion Point" style="top: 18%; left: 10%;"></div>
 
-      <div class="map-area info" id="fun-fact" data-area="quick tip!" data-info="Always verify the sender's email address to spot phishing attempts!" style="top: 30%; left: 75%;"></div>
+       <!-- Info areas will be dynamically created here -->
+      <!-- <div class="map-area info" id="fun-fact" data-area="quick tip!" data-info="Always verify the sender's email address to spot phishing attempts!" style="top: 30%; left: 75%;"></div>
       <div class="map-area info" id="quick-tip"  data-area="quick tip!" data-info="Always use two-factor authentication (2FA) for extra account security!" style="top: 50%; left: 20%;"></div>
-      <div class="map-area info" id="quick-tip2"  data-area="quick tip!" data-info="Data backups are important to protect against ransomware.  Any less than 3 copies of your data is NOT a backup!" style="top: 10%; left: 20%;"></div>
+      <div class="map-area info" id="quick-tip2"  data-area="quick tip!" data-info="Data backups are important to protect against ransomware.  Any less than 3 copies of your data is NOT a backup!" style="top: 10%; left: 20%;"></div> -->
 
       <!-- Button Container -->
       <div class="button-container">
