add: game area code outline

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     </div>
   </noscript>
 
+  <div id="full-screen-overlay" style="display: none;">
+    <img src="./graphics/bg-phishing-cove.webp" alt="Overlay Map" id="full-screen-image">
+  </div>
+
   <audio id="audioPlayer" src="./sounds/pirate-music.mp3"></audio>
   <audio id="sfxSound" src="./sounds/parrot-5.wav"></audio>
   <audio id="goldSound" src="./sounds/gold-10.wav"></audio>
@@ -47,11 +51,6 @@
       <div class="map-area incomplete" id="market" data-area="Shop the Fraud Bazaar" style="top: 42%; left: 23%;"></div>
       <div class="map-area incomplete" id="deepfakes" data-area="Deep Water... Deep Fakes" style="top: 52%; left: 80%;"></div>
       <div class="map-area incomplete" id="blackmail" data-area="Extortion Point" style="top: 18%; left: 10%;"></div>
-
-       <!-- Info areas will be dynamically created here -->
-      <!-- <div class="map-area info" id="fun-fact" data-area="quick tip!" data-info="Always verify the sender's email address to spot phishing attempts!" style="top: 30%; left: 75%;"></div>
-      <div class="map-area info" id="quick-tip"  data-area="quick tip!" data-info="Always use two-factor authentication (2FA) for extra account security!" style="top: 50%; left: 20%;"></div>
-      <div class="map-area info" id="quick-tip2"  data-area="quick tip!" data-info="Data backups are important to protect against ransomware.  Any less than 3 copies of your data is NOT a backup!" style="top: 10%; left: 20%;"></div> -->
 
       <!-- Button Container -->
       <div class="button-container">
