update: add win scene (falling dubloons)

--- a/design-notes/falling-dubloons.html
+++ b/design-notes/falling-dubloons.html
@@ -46,31 +46,33 @@
 <body>
 
 <script>
-    function createDubloons(count) {
-        for (let i = 0; i < count; i++) {
-            const dubloon = document.createElement('div');
-            dubloon.classList.add('dubloon');
+  function createDubloons(count, minMargin = 0, maxMargin = window.innerWidth) {
+      for (let i = 0; i < count; i++) {
+          const dubloon = document.createElement('div');
+          dubloon.classList.add('dubloon');
 
-            // Randomize position, size, rotation, and delay
-            const size = Math.random() * 40 + 20; // Sizes between 20px and 60px
-            const rotation = (Math.random() > 0.5 ? 1 : -1) * (Math.random() * 360); // Clockwise or counterclockwise
-            const delay = Math.random() * 2 + "s"; // Random delay between 0 and 2 seconds
+          // Randomize position, size, rotation, and delay
+          const size = Math.random() * 40 + 20; // Sizes between 20px and 60px
+          const rotation = (Math.random() > 0.5 ? 1 : -1) * (Math.random() * 360); // Clockwise or counterclockwise
+          const delay = Math.random() * 2 + "s"; // Random delay between 0 and 2 seconds
 
-            dubloon.style.setProperty('--rotation', `${rotation}deg`);
-            dubloon.style.setProperty('--delay', delay);
-            dubloon.style.setProperty('--size', `${size}px`);
-            dubloon.style.width = `${size}px`;
-            dubloon.style.height = `${size}px`;
-            dubloon.style.left = `${Math.random() * window.innerWidth}px`;
+          const leftPosition = Math.random() * (maxMargin - minMargin - size) + minMargin; // Ensure within margins
 
-            console.log(`Creating dubloon: size=${size}, rotation=${rotation}, delay=${delay}`); // Debug log
+          dubloon.style.setProperty('--rotation', `${rotation}deg`);
+          dubloon.style.setProperty('--delay', delay);
+          dubloon.style.setProperty('--size', `${size}px`);
+          dubloon.style.width = `${size}px`;
+          dubloon.style.height = `${size}px`;
+          dubloon.style.left = `${leftPosition}px`;
 
-            document.body.appendChild(dubloon);
-        }
+          console.log(`Creating dubloon: size=${size}, rotation=${rotation}, delay=${delay}, left=${leftPosition}`); // Debug log
+
+          document.body.appendChild(dubloon);
+      }
     }
 
     // Start animation
-    createDubloons(50);
+    createDubloons(50, 100, window.innerWidth - 100);
 </script>
 </body>
 </html>
