--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cyber Survivor Island</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="dubloons.css">
   <link rel="stylesheet" href="seasonal.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -145,6 +146,7 @@
   
 
   <script src="script.js"></script>
+  <script src="dubloons.js"></script>
   <script src="sounds.js"></script>
 </body>
 </html>
