update: lock down area positions

--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
       <img src="./graphics/mouse-mini.webp" alt="mouse" id="mouse-graphic">
 
       <!-- Clickable Areas -->
-      <div class="map-area incomplete" id="phishing" data-area="The Phishing Cove"  style="top: 40%; left: 45%;"></div>
-      <div class="map-area incomplete" id="jungle" data-area="Social Media Scam Safari"  style="top: 15%; left: 60%;"></div>
-      <div class="map-area incomplete" id="volcano" data-area="The Vishing Volcano"style="top: 26%; left: 86%;"></div>
-      <div class="map-area incomplete" id="passwords" data-area="Fortress of Passwords" style="top: 24%; left: 76%;"></div>
-      <div class="map-area incomplete" id="darkweb" data-area="Depths of the Dark Web" style="top: 54%; left: 4%;"></div>
-      <div class="map-area incomplete" id="shipwreck" data-area="Malware Wreckage" style="top: 60%; left: 24%;"></div>
-      <div class="map-area incomplete" id="market" data-area="Shop the Fraud Bazaar" style="top: 42%; left: 23%;"></div>
-      <div class="map-area incomplete" id="deepfakes" data-area="Deep Water... Deep Fakes" style="top: 52%; left: 80%;"></div>
-      <div class="map-area incomplete" id="blackmail" data-area="Extortion Point" style="top: 18%; left: 10%;"></div>
+      <div class="map-area" id="phishing" data-area="The Phishing Cove"></div>
+      <div class="map-area" id="jungle" data-area="Social Media Scam Safari"></div>
+      <div class="map-area" id="volcano" data-area="The Vishing Volcano"></div>
+      <div class="map-area" id="passwords" data-area="Fortress of Passwords"></div>
+      <div class="map-area" id="darkweb" data-area="Depths of the Dark Web"></div>
+      <div class="map-area" id="shipwreck" data-area="Malware Wreckage"></div>
+      <div class="map-area" id="market" data-area="Shop the Fraud Bazaar"></div>
+      <div class="map-area" id="deepfakes" data-area="Deep Water... Deep Fakes"></div>
+      <div class="map-area" id="blackmail" data-area="Extortion Point"></div>
 
       <!-- Button Container -->
       <div class="button-container">
