add: game data file - for each 'slide', the quiz and a conclusion

--- a/index.html
+++ b/index.html
@@ -182,5 +182,6 @@
   <script src="script.js"></script>
   <script src="dubloons.js"></script>
   <script src="sounds.js"></script>
+  <script src="game-data.js"></script>
 </body>
 </html>
