add: game area handler, modals, basic styles

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Cyber Survivor Island</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="dubloons.css">
+  <link rel="stylesheet" href="game-modals.css">
   <link rel="stylesheet" href="credits.css">
   <link rel="stylesheet" href="seasonal.css">
 
@@ -100,6 +101,16 @@
           <button id="close-modal" class="modal-button">Close</button>
         </div>
       </div>
+    </div>
+  </div>
+
+  <!-- Game Area Modal Structure -->
+  <div id="game-modal" style="display: none;">
+    <div id="game-modal-content">
+      <h2 id="game-modal-title"></h2>
+      <p id="game-modal-text"></p>
+      <div id="game-quiz-options" style="display: none;"></div>
+      <button id="game-next-button">Next</button>
     </div>
   </div>
 
