update: tweak quiz button styles

--- a/index.html
+++ b/index.html
@@ -194,5 +194,6 @@
   <script src="dubloons.js"></script>
   <script src="sounds.js"></script>
   <script src="game-data.js"></script>
+  <script src="game-handler.js"></script>
 </body>
 </html>
