--- a/design-notes/password-tester.html
+++ b/design-notes/password-tester.html
@@ -8,8 +8,10 @@
     body { font-family: Arial, sans-serif; margin: 20px; }
     #strengthMeter { width: 100%; height: 20px; background: #ddd; margin: 10px 0; border-radius: 5px; }
     #strengthMeter div { height: 100%; width: 0; background: green; border-radius: 5px; transition: width 0.3s; }
-    #feedback, #crackTime { font-size: 0.9em; color: #555; margin-top: 5px; }
+    #feedback, #crackTime, #debug { font-size: 0.9em; color: #555; margin-top: 5px; }
+    pre { background: #f8f8f8; padding: 10px; border-radius: 5px; overflow-x: auto; }
   </style>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/zxcvbn/4.4.2/zxcvbn.js"></script>
 </head>
 <body>
   <h1>Password Strength Tester</h1>
@@ -17,104 +19,43 @@
   <div id="strengthMeter"><div></div></div>
   <p id="feedback"></p>
   <p id="crackTime"></p>
+  <h3>Debug Output:</h3>
+  <pre id="debug"></pre>
 
   <script>
     const passwordInput = document.getElementById('passwordInput');
     const strengthMeter = document.getElementById('strengthMeter').firstElementChild;
     const feedback = document.getElementById('feedback');
     const crackTime = document.getElementById('crackTime');
+    const debug = document.getElementById('debug');
 
     passwordInput.addEventListener('input', () => {
       const password = passwordInput.value;
-      const result = analyzePassword(password);
-      
+      const result = zxcvbn(password);
+
       // Update meter and feedback
-      strengthMeter.style.width = `${result.strength}%`;
-      strengthMeter.style.background = result.color;
-      feedback.textContent = result.feedback;
-      crackTime.textContent = `Estimated time to crack: ${result.timeToCrack}`;
+      const strength = Math.min(100, result.score * 25); // Scale score (0-4) to percentage (0-100)
+      strengthMeter.style.width = `${strength}%`;
+      strengthMeter.style.background = getColor(result.score);
+      feedback.textContent = result.feedback.suggestions.join(' ') || 'Your password looks good!';
+      // crackTime.textContent = `Estimated time to crack: ${result.crack_times_display.offline_fast_hashing_1e10_per_second}`;
+      crackTime.textContent = `Estimated time to crack: ${result.crack_times_display.offline_slow_hashing_1e4_per_second}`;
+      // above aligns with BitWardens system:  https://bitwarden.com/password-strength/
+
+      // Debug output
+      debug.textContent = JSON.stringify(result, null, 2);
     });
 
-    function analyzePassword(password) {
-      const charSets = [
-        /[a-z]/, // Lowercase
-        /[A-Z]/, // Uppercase
-        /[0-9]/, // Numbers
-        /[!@#$%^&*(),.?":{}|<>]/ // Special characters
-      ];
-
-      // Calculate character set size
-      let charSetSize = 0;
-      charSets.forEach(regex => { if (regex.test(password)) charSetSize += regex.source.length; });
-
-      const length = password.length;
-
-      // Adjust entropy based on common patterns
-      const penalty = calculatePatternPenalty(password);
-      const entropy = length * (charSetSize > 0 ? Math.log2(charSetSize) : 0) - penalty; // Basic entropy formula with pattern penalty
-
-      // Estimated guesses to crack the password
-      const guesses = Math.pow(2, entropy);
-
-      // Time to crack (adjusted for realistic speeds)
-      const onlineTime = guesses / 1000; // 1,000 guesses/second
-      const offlineTime = guesses / 1e12; // 1 trillion guesses/second
-
-      // Format times
-      const formattedOnline = formatTime(onlineTime);
-      const formattedOffline = formatTime(offlineTime);
-
-      const timeToCrack = `Online: ${formattedOnline}, Offline: ${formattedOffline}`;
-
-      // Estimate strength and feedback
-      const strength = Math.min(100, Math.round(entropy)); // Cap at 100%
-      let feedback = '';
-      let color = 'red';
-
-      if (strength < 30) {
-        feedback = 'Weak: Add more characters or use different types of characters.';
-        color = 'red';
-      } else if (strength < 60) {
-        feedback = 'Fair: Add more variety or length.';
-        color = 'orange';
-      } else if (strength < 80) {
-        feedback = 'Good: Your password is fairly strong.';
-        color = 'blue';
-      } else {
-        feedback = 'Strong: Great job!';
-        color = 'green';
+    function getColor(score) {
+      // Map zxcvbn score to colors
+      switch (score) {
+        case 0: return 'red';
+        case 1: return 'orange';
+        case 2: return 'yellow';
+        case 3: return 'blue';
+        case 4: return 'green';
+        default: return 'gray';
       }
-
-      return { strength, feedback, color, timeToCrack };
-    }
-
-    function calculatePatternPenalty(password) {
-      // Check for common patterns like repeated characters, sequences, or dictionary words
-      const commonPatterns = [
-        /^[a-z]+$/, // All lowercase letters
-        /^[A-Z]+$/, // All uppercase letters
-        /^[0-9]+$/, // All numbers
-        /^password|123456|qwerty|letmein|123123|abcdef$/i // Common passwords
-      ];
-      let penalty = 0;
-
-      commonPatterns.forEach(pattern => {
-        if (pattern.test(password)) penalty += 10; // Reduce entropy for common patterns
-      });
-
-      // Penalize repeated characters or sequences
-      if (/([a-zA-Z0-9])\1{2,}/.test(password)) penalty += 10; // Repeated characters
-      if (/123|abc|qwe|asd|zxc/.test(password.toLowerCase())) penalty += 10; // Sequences
-
-      return penalty;
-    }
-
-    function formatTime(seconds) {
-      if (seconds < 60) return `${Math.floor(seconds)} seconds`;
-      if (seconds < 3600) return `${Math.floor(seconds / 60)} minutes`;
-      if (seconds < 86400) return `${Math.floor(seconds / 3600)} hours`;
-      if (seconds < 31536000) return `${Math.floor(seconds / 86400)} days`;
-      return `${Math.floor(seconds / 31536000)} years`;
     }
   </script>
 </body>
