--- a/design-notes/password-tester.html
+++ b/design-notes/password-tester.html
@@ -5,27 +5,50 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Password Strength Tester</title>
   <style>
+      pre {
+        background: #f8f8f8;
+        padding: 10px;
+        border-radius: 5px;
+        overflow-y: scroll; /* Force vertical scrollbar */
+        max-height: 300px; /* Limit height to make scroll visible */
+      }
     body { font-family: Arial, sans-serif; margin: 20px; }
-    #strengthMeter { width: 100%; height: 20px; background: #ddd; margin: 10px 0; border-radius: 5px; }
+    .container { max-width: 600px; margin: 0 auto; }
+    #passwordInput { width: 100%; padding: 10px; }
+    #strengthMeter { width: 100%; height: 15px; background: #ddd; margin: 10px 0; border-radius: 5px; }
     #strengthMeter div { height: 100%; width: 0; background: green; border-radius: 5px; transition: width 0.3s; }
-    #feedback, #crackTime, #debug { font-size: 0.9em; color: #555; margin-top: 5px; }
+    #feedback, #crackTime, #warnings { font-size: 0.9em; color: #555; margin-top: 5px; }
+    #warnings { color: #e67e22; }
     pre { background: #f8f8f8; padding: 10px; border-radius: 5px; overflow-x: auto; }
+    .note { font-size: 0.85em; color: #555; margin-top: 20px; }
+    .note a { color: #007bff; text-decoration: none; }
+    .note a:hover { text-decoration: underline; }
   </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/zxcvbn/4.4.2/zxcvbn.js"></script>
 </head>
 <body>
-  <h1>Password Strength Tester</h1>
-  <input type="text" id="passwordInput" placeholder="Enter your password" style="width: 100%; padding: 10px;" />
-  <div id="strengthMeter"><div></div></div>
-  <p id="feedback"></p>
-  <p id="crackTime"></p>
-  <h3>Debug Output:</h3>
-  <pre id="debug"></pre>
+  <div class="container">
+    <h1>Password Strength Tester</h1>
+    <input type="text" id="passwordInput" placeholder="Enter your password" />
+    <div id="strengthMeter"><div></div></div>
+    <p id="feedback"></p>
+    <p id="warnings"></p>
+    <p id="crackTime"></p>
+    <h3>zxcvbn Output:</h3>
+    <pre id="debug"></pre>
+    <div class="note">
+      <p><strong>Is it safe to type my real password here?</strong><br>
+      Yes. Your password is never transmitted to any server and is processed locally in your device's web browser.</p>
+      <p><strong>How is password strength calculated?</strong><br>
+      We use a tool called <a href="https://github.com/dropbox/zxcvbn" target="_blank" rel="noopener noreferrer">zxcvbn</a>, developed by Dropbox, to analyze passwords based on real-world data and patterns.</p>
+    </div>
+  </div>
 
   <script>
     const passwordInput = document.getElementById('passwordInput');
     const strengthMeter = document.getElementById('strengthMeter').firstElementChild;
     const feedback = document.getElementById('feedback');
+    const warnings = document.getElementById('warnings');
     const crackTime = document.getElementById('crackTime');
     const debug = document.getElementById('debug');
 
@@ -33,14 +56,20 @@
       const password = passwordInput.value;
       const result = zxcvbn(password);
 
-      // Update meter and feedback
+      // Update strength meter
       const strength = Math.min(100, result.score * 25); // Scale score (0-4) to percentage (0-100)
       strengthMeter.style.width = `${strength}%`;
       strengthMeter.style.background = getColor(result.score);
+
+      // Update feedback
       feedback.textContent = result.feedback.suggestions.join(' ') || 'Your password looks good!';
-      // crackTime.textContent = `Estimated time to crack: ${result.crack_times_display.offline_fast_hashing_1e10_per_second}`;
-      crackTime.textContent = `Estimated time to crack: ${result.crack_times_display.offline_slow_hashing_1e4_per_second}`;
-      // above aligns with BitWardens system:  https://bitwarden.com/password-strength/
+      warnings.textContent = result.feedback.warning || '';
+
+      // Update crack time
+        crackTime.innerHTML = `
+          Estimated time to crack (online no throttle): ${result.crack_times_display.online_no_throttling_10_per_second}<br>
+          Estimated time to crack (slow hashing): ${result.crack_times_display.offline_slow_hashing_1e4_per_second}
+        `;
 
       // Debug output
       debug.textContent = JSON.stringify(result, null, 2);
