fix: bar 'graph' bug

--- a/design-notes/password-tester.html
+++ b/design-notes/password-tester.html
@@ -57,7 +57,7 @@
       const result = zxcvbn(password);
 
       // Update strength meter
-      const strength = Math.min(100, result.score * 25); // Scale score (0-4) to percentage (0-100)
+      const strength = result.score === 0 ? 5 : Math.min(100, result.score * 25); // Ensure minimum width for score 0
       strengthMeter.style.width = `${strength}%`;
       strengthMeter.style.background = getColor(result.score);
 
