update: tweak wording

--- a/design-notes/password-tester.html
+++ b/design-notes/password-tester.html
@@ -90,7 +90,7 @@
       // Update crack time
       crackTime.innerHTML = `
         Estimated time to crack (online no throttle): ${result.crack_times_display.online_no_throttling_10_per_second}<br>
-        Estimated time to crack (slow hashing): ${result.crack_times_display.offline_slow_hashing_1e4_per_second}
+        Estimated time to crack (offline, slow hashing): ${result.crack_times_display.offline_slow_hashing_1e4_per_second}
       `;
 
       // Debug output
@@ -172,7 +172,7 @@
 
     copyPasswordButton.addEventListener('click', copyToClipboard);
     generatePasswordButton.addEventListener('click', generatePassword);
-    
+
     // Generate an initial password on page load
     generatePassword();
   </script>
