update: split out game area data -- not the prettiest method, but it is what it is for now

--- a/index.html
+++ b/index.html
@@ -190,8 +190,10 @@
     </div>
   
   
-
-  <script src="script.js"></script>
+  <script  src="./game-area-data/phishing.js"></script>
+  <script src="./game-area-data/shipwreck.js"></script>
+  
+  <script  src="script.js"></script>
   <script src="dubloons.js"></script>
   <script src="sounds.js"></script>
   <script src="game-data.js"></script>
