add: additional game area and data

--- a/index.html
+++ b/index.html
@@ -192,7 +192,9 @@
   
   <script  src="./game-area-data/phishing.js"></script>
   <script src="./game-area-data/shipwreck.js"></script>
-  
+  <script src="./game-area-data/passwords.js"></script>
+  <script src="./game-area-data/jungle.js"></script>
+
   <script  src="script.js"></script>
   <script src="dubloons.js"></script>
   <script src="sounds.js"></script>
