add: misc game data files for testing

--- a/index.html
+++ b/index.html
@@ -194,6 +194,8 @@
   <script src="./game-area-data/shipwreck.js"></script>
   <script src="./game-area-data/passwords.js"></script>
   <script src="./game-area-data/jungle.js"></script>
+  <script src="./game-area-data/extortion.js"></script>
+  <script src="./game-area-data/volcano.js"></script>
 
   <script  src="script.js"></script>
   <script src="dubloons.js"></script>
