--- a/index.html
+++ b/index.html
@@ -190,12 +190,15 @@
     </div>
   
   
-  <script  src="./game-area-data/phishing.js"></script>
+  <script src="./game-area-data/phishing.js"></script>
   <script src="./game-area-data/shipwreck.js"></script>
   <script src="./game-area-data/passwords.js"></script>
   <script src="./game-area-data/jungle.js"></script>
   <script src="./game-area-data/extortion.js"></script>
   <script src="./game-area-data/volcano.js"></script>
+  <script src="./game-area-data/shopping.js"></script>
+  <script src="./game-area-data/darkweb.js"></script>
+  <script src="./game-area-data/deepfakes.js"></script>
 
   <script  src="script.js"></script>
   <script src="dubloons.js"></script>
