add: game area botnet bay

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       <div class="map-area" id="market" data-area="Shop the Fraud Bazaar"></div>
       <div class="map-area" id="deepfakes" data-area="Deep Water... Deep Fakes"></div>
       <div class="map-area" id="blackmail" data-area="Extortion Point"></div>
+      <div class="map-area" id="botnetbay" data-area="Botnet Bay"></div>
 
       <!-- Button Container -->
       <div class="button-container">
@@ -199,6 +200,7 @@
   <script src="./game-area-data/shopping.js"></script>
   <script src="./game-area-data/darkweb.js"></script>
   <script src="./game-area-data/deepfakes.js"></script>
+  <script src="./game-area-data/iot.js"></script>
 
   <script  src="script.js"></script>
   <script src="dubloons.js"></script>
