add: additional sound effects for mini games

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
   <audio id="sfxSound" src="./sounds/parrot-5.wav"></audio>
   <audio id="goldSound" src="./sounds/gold-10.wav"></audio>
   <audio id="mouseSound" src="./sounds/mouse-6.wav"></audio>
+  <audio id="gold8Sound" src="./sounds/gold-8.wav"></audio>
+  <audio id="musket6Sound" src="./sounds/musket-6.wav"></audio>
 
   <div id="game-container">
     <div class="title-wrapper">
