update: refactor for imports instead of includes

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     </div>
   
   
-  <script src="./game-area-data/phishing.js"></script>
+  <!-- <script src="./game-area-data/phishing.js"></script>
   <script src="./game-area-data/shipwreck.js"></script>
   <script src="./game-area-data/passwords.js"></script>
   <script src="./game-area-data/jungle.js"></script>
@@ -202,12 +202,12 @@
   <script src="./game-area-data/shopping.js"></script>
   <script src="./game-area-data/darkweb.js"></script>
   <script src="./game-area-data/deepfakes.js"></script>
-  <script src="./game-area-data/iot.js"></script>
+  <script src="./game-area-data/iot.js"></script> -->
 
-  <script  src="script.js"></script>
-  <script src="dubloons.js"></script>
-  <script src="sounds.js"></script>
-  <script src="game-data.js"></script>
-  <script src="game-handler.js"></script>
+  <script src="script.js" defer></script>
+  <script src="dubloons.js" derer></script>
+  <script src="sounds.js" defer></script>
+  <script src="game-data.js" type="module" defer></script>
+  <script src="game-handler.js" defer></script>
 </body>
 </html>
